[gd_scene load_steps=28 format=2]

[ext_resource path="res://resources/Textures/background/bg_01.png" type="Texture" id=1]
[ext_resource path="res://resources/Textures/button_01_normal.png" type="Texture" id=2]
[ext_resource path="res://scenes/log_in_screen/login_screen_bg.gd" type="Script" id=3]
[ext_resource path="res://resources/font/login_signup_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/font/SERIO___.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://resources/font/OpenSans-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/log_in_screen/login_signup_screen.gd" type="Script" id=7]
[ext_resource path="res://scenes/log_in_screen/login.gd" type="Script" id=8]
[ext_resource path="res://scenes/log_in_screen/signup.gd" type="Script" id=9]
[ext_resource path="res://scenes/user_profile/yellow_bg.png" type="Texture" id=10]
[ext_resource path="res://scenes/user_profile/white_bg.jpg" type="Texture" id=11]
[ext_resource path="res://scenes/log_in_screen/warning.gd" type="Script" id=12]
[ext_resource path="res://scenes/log_in_screen/back_btn.gd" type="Script" id=14]
[ext_resource path="res://scenes/log_in_screen/back_btn2.gd" type="Script" id=15]
[ext_resource path="res://resources/Themes/buttons1.tres" type="Theme" id=16]
[ext_resource path="res://resources/Themes/login_buttons.tres" type="Theme" id=17]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=12]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=13]
resource_name = "login_sucessful"
tracks/0/type = "value"
tracks/0/path = NodePath("bg:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("panel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 0.4 ) ]
}

[node name="login_signup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="login_signup_screen" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="login_btn" type="Button" parent="login_signup_screen"]
margin_left = 791.0
margin_top = 234.0
margin_right = 1358.37
margin_bottom = 433.068
theme = ExtResource( 17 )
text = "LOGIN"

[node name="or" type="Label" parent="login_signup_screen"]
margin_left = 981.0
margin_top = 500.0
margin_right = 1103.0
margin_bottom = 602.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "OR"

[node name="signup_btn" type="Button" parent="login_signup_screen"]
margin_left = 663.0
margin_top = 669.0
margin_right = 1392.37
margin_bottom = 868.068
theme = ExtResource( 17 )
text = "Sign In"

[node name="login_screen" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 8 )

[node name="back_btn" type="Button" parent="login_screen"]
margin_left = 60.0
margin_top = 33.0
margin_right = 327.374
margin_bottom = 147.068
theme = ExtResource( 16 )
text = "back"
script = ExtResource( 14 )

[node name="Login_title" type="Label" parent="login_screen"]
margin_left = 836.0
margin_top = 249.0
margin_right = 1126.0
margin_bottom = 351.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Login"
align = 1

[node name="username" type="Label" parent="login_screen"]
margin_left = 539.0
margin_top = 402.0
margin_right = 720.0
margin_bottom = 463.0
custom_fonts/font = ExtResource( 4 )
text = "Email:"

[node name="username" type="TextEdit" parent="login_screen/username"]
margin_left = 224.0
margin_top = -10.0
margin_right = 1024.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )

[node name="password" type="Label" parent="login_screen"]
margin_left = 419.0
margin_top = 544.0
margin_right = 736.0
margin_bottom = 605.0
custom_fonts/font = ExtResource( 4 )
text = "Password:"

[node name="password" type="LineEdit" parent="login_screen/password"]
margin_left = 351.0
margin_top = -10.0
margin_right = 1151.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 4 )
secret = true

[node name="login_enter_btn" type="Button" parent="login_screen"]
margin_left = 980.0
margin_top = 698.0
margin_right = 1274.37
margin_bottom = 812.068
theme = ExtResource( 16 )
text = "login"

[node name="signup_screen" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 9 )

[node name="title" type="Label" parent="signup_screen"]
margin_left = 809.0
margin_top = 163.0
margin_right = 1187.0
margin_bottom = 265.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Sign Up"

[node name="s_username" type="Label" parent="signup_screen"]
margin_left = 277.0
margin_top = 342.0
margin_right = 786.0
margin_bottom = 403.0
custom_fonts/font = ExtResource( 4 )
text = "Google Account:"

[node name="s_username" type="TextEdit" parent="signup_screen/s_username"]
margin_left = 566.0
margin_top = -20.0
margin_right = 1366.0
margin_bottom = 80.0
rect_min_size = Vector2( 800, 100 )
custom_fonts/font = SubResource( 9 )

[node name="s_password" type="Label" parent="signup_screen"]
margin_left = 363.0
margin_top = 508.0
margin_right = 663.0
margin_bottom = 569.0
custom_fonts/font = SubResource( 7 )
text = "password"

[node name="s_password" type="LineEdit" parent="signup_screen/s_password"]
margin_left = 481.0
margin_top = -28.0
margin_right = 1281.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 10 )
secret = true

[node name="_confirmpassword" type="Label" parent="signup_screen"]
margin_left = 204.0
margin_top = 659.0
margin_right = 800.0
margin_bottom = 720.0
custom_fonts/font = ExtResource( 4 )
text = "Confirm Password:"

[node name="cpassword" type="LineEdit" parent="signup_screen/_confirmpassword"]
margin_left = 638.0
margin_top = -22.0
margin_right = 1438.0
margin_bottom = 78.0
rect_min_size = Vector2( 800, 100 )
custom_fonts/font = SubResource( 11 )
secret = true

[node name="sign_in_btn" type="Button" parent="signup_screen"]
margin_left = 1032.0
margin_top = 840.0
margin_right = 1409.37
margin_bottom = 954.068
theme = ExtResource( 16 )
text = "Sign in"

[node name="back_btn" type="Button" parent="signup_screen"]
margin_left = 51.0
margin_top = 31.0
margin_right = 318.374
margin_bottom = 145.068
theme = ExtResource( 16 )
text = "back"
script = ExtResource( 15 )

[node name="warning" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 12 )

[node name="warning_bg" type="TextureRect" parent="warning"]
modulate = Color( 0, 0, 0, 0.415686 )
margin_top = -21.0
margin_right = 1200.0
margin_bottom = 579.0
rect_scale = Vector2( 1.63371, 1.86411 )
texture = ExtResource( 11 )

[node name="warning" type="Sprite" parent="warning"]
modulate = Color( 1, 0.917647, 0.917647, 1 )
position = Vector2( 953, 426 )
scale = Vector2( 0.784561, 0.428507 )
texture = ExtResource( 10 )

[node name="warning" type="Label" parent="warning/warning"]
margin_left = -347.0
margin_top = -135.0
margin_right = 303.0
margin_bottom = 128.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "aaaaa"
align = 1
valign = 1
autowrap = true

[node name="ok_btn" type="Button" parent="warning"]
margin_left = 786.0
margin_top = 561.0
margin_right = 1094.0
margin_bottom = 661.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = ExtResource( 4 )
text = "OK"
icon = ExtResource( 2 )
flat = true
clip_text = true
icon_align = 1

[node name="login_sucess" type="CanvasLayer" parent="."]
visible = false

[node name="bg" type="TextureRect" parent="login_sucess"]
visible = false
modulate = Color( 1, 1, 1, 0.360784 )
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 1.63855, 1.88541 )
texture = ExtResource( 11 )

[node name="panel" type="Sprite" parent="login_sucess"]
position = Vector2( 993, 508 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 10 )

[node name="message" type="Label" parent="login_sucess/panel"]
margin_left = -377.0
margin_top = -176.0
margin_right = 344.0
margin_bottom = 199.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "aaaaa"
align = 1
valign = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="login_sucess"]
anims/login_sucessful = SubResource( 13 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 3 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 984, 546 )
texture = ExtResource( 1 )

[connection signal="pressed" from="login_signup_screen/login_btn" to="login_signup_screen" method="_on_login_btn_pressed"]
[connection signal="pressed" from="login_signup_screen/signup_btn" to="login_signup_screen" method="_on_signup_btn_pressed"]
[connection signal="pressed" from="login_screen/back_btn" to="login_screen/back_btn" method="_on_back_btn_pressed"]
[connection signal="pressed" from="signup_screen/back_btn" to="signup_screen/back_btn" method="_on_back_btn_pressed"]
[connection signal="pressed" from="warning/ok_btn" to="warning" method="_on_ok_btn_pressed"]
[connection signal="animation_finished" from="login_sucess/AnimationPlayer" to="login_screen" method="_on_AnimationPlayer_animation_finished"]
